--- a/app/index.html
+++ b/app/index.html
@@ -19,11 +19,11 @@
   <div class="container">
 
     <!-- EDIT THIS SECTION TO INCLUDE YOUR EXHIBITION DETAILS -->
+    <div ng-hide="listHide" class="ng-hide" id="background-image1" class="page-header">img/HS_1.jpg</div>
+    <div ng-hide="listHide" class="ng-hide" id="background-image2" class="page-header">img/HS_2.jpg</div>
+    <div ng-hide="listHide" class="ng-hide" id="background-image3" class="page-header">img/HS_3.jpg</div>
 
-    <div ng-hide="listHide" class="ng-hide" id="background-image1" class="page-header">img/HS_1.png</div>
-    <div ng-hide="listHide" class="ng-hide" id="background-image2" class="page-header">img/HS_2.png</div>
-    <div ng-hide="listHide" class="ng-hide" id="background-image3" class="page-header">img/HS_3.png</div>
-
+      <!-- Exhibition highlights -->
     <div ng-hide="listHide" class="ng-hide" id="highlights-image1">img/high_1.jpg</div>
     <div ng-hide="listHide" class="ng-hide" id="highlights-caption1">Caption 1</div>
 
@@ -38,46 +38,40 @@
 
     <div ng-hide="listHide" class="ng-hide" id="highlights-image5">img/high_5.jpg</div>
     <div ng-hide="listHide" class="ng-hide" id="highlights-caption5"> Caption 5</div>
+
     <div ng-hide="listHide" class="ng-hide" id="highlights-image6">img/high_6.jpg</div>
     <div ng-hide="listHide" class="ng-hide" id="highlights-caption6"> Caption 6</div>
+
     <div ng-hide="listHide" class="ng-hide" id="highlights-image7">img/high_7.jpg</div>
     <div ng-hide="listHide" class="ng-hide" id="highlights-caption7"> Caption 7</div>
-    <div ng-hide="listHide" class="ng-hide" id="highlights-image8">img/high_8.jpg</div>
-    <div ng-hide="listHide" class="ng-hide" id="highlights-caption8"> Caption 8</div>
-    <div ng-hide="listHide" class="ng-hide" id="highlights-image9">img/high_9.jpg</div>
-    <div ng-hide="listHide" class="ng-hide" id="highlights-caption9"> Caption 9</div>
-    <div ng-hide="listHide" class="ng-hide" id="highlights-image10">img/high_10.jpg</div>
-    <div ng-hide="listHide" class="ng-hide" id="highlights-caption10"> Caption 10</div>
-    <div ng-hide="listHide" class="ng-hide" id="highlights-image11">img/high_11.jpg</div>
-    <div ng-hide="listHide" class="ng-hide" id="highlights-caption11"> Caption 11</div>
-    <div ng-hide="listHide" class="ng-hide" id="highlights-image12">img/high_12.jpg</div>
-    <div ng-hide="listHide" class="ng-hide" id="highlights-caption12"> Caption 12</div>
 
-    <h1 ng-hide="listHide" class="ng-hide" id="exhibition-name" class="page-header">The Sell</h1>
-    <h2 ng-hide="listHide" class="ng-hide" id="exhibition-tagline">An assortment of weather prophets</h2>
+    <h1 ng-hide="listHide" class="ng-hide" id="exhibition-name" class="page-header">Meiji Japan</h1>
+    <h2 ng-hide="listHide" class="ng-hide" id="exhibition-tagline"></h2>
     <div ng-hide="listHide" class="ng-hide" id="exhibition-description">
-      Step back in time, into the ads of Australia's past. Ephemeral by nature, often lasting in impact, advertising surrounds us. It aims to inform us and influence how we live, what we buy and how we spend our leisure time. It may not reflect our reality, yet it can affect how we remember the past. Through highlights from the Library’s vast collections, this exhibition explores how Australian advertising has used words, images and sound to inform and persuade. It traces how advertising has evolved as society and technology have changed, asking what it reveals about the everyday lives of Australians from the 1790s to the 1990s.
+        Step into the tumultuous world of Meiji Japan (1868–1912), through a selection of stunning Japanese woodblock illustrations. Used to illustrate Japanese novels, these beautiful images, known as kuchi-e (literally, ‘mouth/opening picture’), accompany stories filled with drama, tragedy and intrigue, reflecting the uncertainty of the times. Curated by Dr. Gary Hickey, the exhibition draws upon a substantial collection of kuchi-e amassed by University of NSW Emeritus Professor Richard Clough (1921-2014) and donated to the Library. This collection, along with other works acquired, forms one of the most significant collections of this genre in the world and the largest focused collection of Japanese art in Australia. The exhibition features over twenty artists and a range of subjects, illustrating a fascinating history of a genre profiled for the first time in a major exhibition.
     </div>
     <div ng-hide="listHide" class="ng-hide" id="exhibition-highlights">
       EXHIBITION HIGHLIGHTS
     </div>
     <div ng-hide="listHide" class="ng-hide" id="exhibition-credit">
-      <p><a>The Sell: Australian Advertising 1790s to 1990s</a></p>
+      <p><a>Melodrama in Meiji Japan</a></p>
       <p>National Library of Australia, Canberra</p>
-      <p>23rd Novemeber 2016 to 25th April 2017</p>
+      <p>24th May to 27th August 2017</p>
     </div>
     <ul ng-hide="listHide" class="ng-hide" id="lists">
       <!-- CHANGE THIS TO LIST THE TROVE LISTS THAT MAKE UP YOUR EXHIBITION -->
-      <li><a class="list-link" href="http://trove.nla.gov.au/list?id=102074">Melodrama in Meiji Japan: Historical Stories</a></li>
-          <li><a class="list-link" href="http://trove.nla.gov.au/list?id=102076">Melodrama in Meiji Japan: Contemporary Life</a></li>
-          <li><a class="list-link" href="http://trove.nla.gov.au/list?id=102083">Melodrama in Meiji Japan: Seasons/Festivals</a></li>
-          <li><a class="list-link" href="http://trove.nla.gov.au/list?id=102086">Melodrama in Meiji Japan: Beautiful Women</a></li>
-          <li><a class="list-link" href="http://trove.nla.gov.au/list?id=102089">Melodrama in Meiji Japan: Dramatic Stories</a></li>
-          <li><a class="list-link" href="http://trove.nla.gov.au/list?id=102090">Melodrama in Meiji Japan: Love & Romance</a></li>
+        <li><a class="list-link" href="http://trove.nla.gov.au/list?id=102074">Historical Stories</a></li>
+        <li><a class="list-link" href="http://trove.nla.gov.au/list?id=102076">Contemporary Life</a></li>
+        <li><a class="list-link" href="http://trove.nla.gov.au/list?id=102083">Seasons & Festivals</a></li>
+        <li><a class="list-link" href="http://trove.nla.gov.au/list?id=102086">Beautiful Women</a></li>
+        <li><a class="list-link" href="http://trove.nla.gov.au/list?id=102089">Dramatic Stories</a></li>
+        <li><a class="list-link" href="http://trove.nla.gov.au/list?id=102090">Love & Romance</a></li>
     </ul>
+<!--
     <div ng-hide="listHide" class="ng-hide" id="exhibition-model-description">
-      <p>Step back in time, into the ads of Australia's past. This exhibition showcases our rich collections of Australian advertising and explores the messages behind many iconic and long forgotten ads.</p>
+      <p>Step back in time, into the ads of Australia's past. This exhibition showcases our rich collections of Australian advertising and explores the messages behind many iconic and long forgotten ad.</p>
     </div>
+-->
     <script>
       // ADD YOUR TROVE API KEY
       var troveAPIKey = "cg6sn8lpjp7o8q19";
@@ -126,13 +120,12 @@
 <script src="bower_components/angular-fontawesome/dist/angular-fontawesome.js"></script>
 <script src="bower_components/angular-truncate/src/truncate.js"></script>
 <script src="bower_components/ngInfiniteScroll/build/ng-infinite-scroll.js"></script>
+<script src="bower_components/get-style-property/get-style-property.js"></script>
 <script src="bower_components/get-size/get-size.js"></script>
 <script src="bower_components/eventie/eventie.js"></script>
 <script src="bower_components/doc-ready/doc-ready.js"></script>
 <script src="bower_components/eventEmitter/EventEmitter.js"></script>
-<script src="bower_components/get-style-property/get-style-property.js"></script>
 <script src="bower_components/matches-selector/matches-selector.js"></script>
-<script src="bower_components/desandro-matches-selector/matches-selector.js"></script>
 <script src="bower_components/fizzy-ui-utils/utils.js"></script>
 <script src="bower_components/outlayer/item.js"></script>
 <script src="bower_components/outlayer/outlayer.js"></script>
