--- a/app/index.html
+++ b/app/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 
-<body id="body" ontouchmove="BlockMove(event);">
+<body id="body" >
 
   <div class="container">
 
