--- a/app/index.html
+++ b/app/index.html
@@ -53,11 +53,13 @@
     <div ng-hide="listHide" class="ng-hide" id="exhibition-highlights">
       EXHIBITION HIGHLIGHTS
     </div>
-    <div ng-hide="listHide" class="ng-hide" id="exhibition-credit">
-      <p><a>Melodrama in Meiji Japan</a></p>
-      <p>National Library of Australia, Canberra</p>
+    <div ng-hide="listHide" class="ng-hide" id="exhibition-footer">
+      <h1>Visit the Exhibition</h1>
+      <h2><a href="http://45.76.118.247:9000">Melodrama in Meiji Japan</a></h2>
+      <p>National Library Australia, Canberra</p>
       <p>24th May to 27th August 2017</p>
     </div>
+
     <ul ng-hide="listHide" class="ng-hide" id="lists">
       <!-- CHANGE THIS TO LIST THE TROVE LISTS THAT MAKE UP YOUR EXHIBITION -->
         <li><a class="list-link" href="http://trove.nla.gov.au/list?id=102074">Historical Stories</a></li>
@@ -117,12 +119,13 @@
 <script src="bower_components/angular-fontawesome/dist/angular-fontawesome.js"></script>
 <script src="bower_components/angular-truncate/src/truncate.js"></script>
 <script src="bower_components/ngInfiniteScroll/build/ng-infinite-scroll.js"></script>
-<script src="bower_components/get-style-property/get-style-property.js"></script>
 <script src="bower_components/get-size/get-size.js"></script>
 <script src="bower_components/eventie/eventie.js"></script>
 <script src="bower_components/doc-ready/doc-ready.js"></script>
 <script src="bower_components/eventEmitter/EventEmitter.js"></script>
+<script src="bower_components/get-style-property/get-style-property.js"></script>
 <script src="bower_components/matches-selector/matches-selector.js"></script>
+<script src="bower_components/desandro-matches-selector/matches-selector.js"></script>
 <script src="bower_components/fizzy-ui-utils/utils.js"></script>
 <script src="bower_components/outlayer/item.js"></script>
 <script src="bower_components/outlayer/outlayer.js"></script>
