--- a/app/index.html
+++ b/app/index.html
@@ -152,7 +152,7 @@
 <script src="js/primary_slider_main.js"></script>
 <script src="js/grid-list-view.js"></script>
 <script>
-  if ((navigator.userAgent.match(/OS X.*Safari/))|| (navigator.userAgent.match(/*iPad*/))&& ! navigator.userAgent.match(/Chrome/)) {
+  if (((navigator.userAgent.match(/OS X.*Safari/))|| (navigator.userAgent.match(/iPad/))) && ! navigator.userAgent.match(/Chrome/)) {
      document.body.className += 'safari';
   }
 </script>
