--- a/app/index.html
+++ b/app/index.html
@@ -36,10 +36,10 @@
 </div>
 
     <div ng-hide="listHide" class="ng-hide" id="highlights-image4">img/high_4.jpg</div>
-    <div ng-hide="listHide" class="ng-hide" id="highlights-caption4"> Koda Yamanaka (1869-1945), Firefly (Hotaru) 1913, woodblock print , nla.obj-152422444</div>
+    <div ng-hide="listHide" class="ng-hide" id="highlights-caption4"> Koda Yamanaka (1869-1945), Firefly (Hotaru) 1913, woodblock print, nla.obj-152422444</div>
 
     <div ng-hide="listHide" class="ng-hide" id="highlights-image5">img/high_5.jpg</div>
-    <div ng-hide="listHide" class="ng-hide" id="highlights-caption5">Hanko Kajita (1870-1917), Plum (Ume) 1908, woodblock print , nla.ob-152422740</div>
+    <div ng-hide="listHide" class="ng-hide" id="highlights-caption5">Hanko Kajita (1870-1917), Plum (Ume) 1908, woodblock print, nla.ob-152422740</div>
 
     <div ng-hide="listHide" class="ng-hide" id="highlights-image6">img/high_6.jpg</div>
     <div ng-hide="listHide" class="ng-hide" id="highlights-caption6"> Keishu Takeuchi (1861-1942), Dawn (Akatsuki) 1912, woodblock print, nla.obj-152406698</div>
@@ -48,7 +48,7 @@
     <div ng-hide="listHide" class="ng-hide" id="highlights-caption7"> Kiyokata Kaburagi (1878-1972), Aloeswood (Kyara) 1908, woodblock print, nla.obj-152429941</div>
 
     <!-- Exhibition details -->
-    <h1 ng-hide="listHide" class="ng-hide" id="exhibition-name" class="page-header">Meiji Japan</h1>
+    <h1 ng-hide="listHide" class="ng-hide" id="exhibition-name" class="page-header">Melodrama in Meiji</h1>
     <h2 ng-hide="listHide" class="ng-hide" id="exhibition-tagline"></h2>
     <div ng-hide="listHide" class="ng-hide" id="exhibition-description">
         Step into the tumultuous world of Meiji Japan (1868–1912), through a selection of stunning Japanese woodblock illustrations. Used to illustrate Japanese novels, these beautiful images, known as kuchi-e (literally, ‘mouth/opening picture’), accompany stories filled with drama, tragedy and intrigue, reflecting the uncertainty of the times. Curated by Dr. Gary Hickey, the exhibition draws upon a substantial collection of kuchi-e amassed by University of NSW Emeritus Professor Richard Clough (1921-2014) and donated to the Library. This collection, along with other works acquired, forms one of the most significant collections of this genre in the world and the largest focused collection of Japanese art in Australia. The exhibition features over twenty artists and a range of subjects, illustrating a fascinating history of a genre profiled for the first time in a major exhibition.
@@ -59,7 +59,7 @@
 
       <div ng-hide="listHide" class="ng-hide" id="exhibition-footer">
       <h1>Visit the Exhibition</h1>
-      <h2><a href="http://45.76.118.247:9000">Melodrama in Meiji Japan</a></h2>
+      <h2><a href="https://www.nla.gov.au/meiji">Melodrama in Meiji Japan</a></h2>
       <p>National Library Australia, Canberra</p>
       <p>24th May to 27th August 2017</p>
     </div>
@@ -96,7 +96,7 @@
           <li id="base-nav-resources"><a ng-href="#/resources/">RESOURCES</a></li>
           <li><!-- EMPTY DIV FOR GREY LINE --></li>
           <li><a class="grid-trigger" href="#/topics/">
-              <img id="index-icon-grid" src="img/icon_grid-black.png" height="100%" width="100%"></a>
+              <img id="index-icon-grid" src="img/icon-hamburger.png" height="100%" width="100%"></a>
            </li> <!-- primary exhibition trigger -->
        </ul>
       </div>
@@ -123,12 +123,13 @@
 <script src="bower_components/angular-fontawesome/dist/angular-fontawesome.js"></script>
 <script src="bower_components/angular-truncate/src/truncate.js"></script>
 <script src="bower_components/ngInfiniteScroll/build/ng-infinite-scroll.js"></script>
-<script src="bower_components/get-style-property/get-style-property.js"></script>
 <script src="bower_components/get-size/get-size.js"></script>
 <script src="bower_components/eventie/eventie.js"></script>
 <script src="bower_components/doc-ready/doc-ready.js"></script>
 <script src="bower_components/eventEmitter/EventEmitter.js"></script>
+<script src="bower_components/get-style-property/get-style-property.js"></script>
 <script src="bower_components/matches-selector/matches-selector.js"></script>
+<script src="bower_components/desandro-matches-selector/matches-selector.js"></script>
 <script src="bower_components/fizzy-ui-utils/utils.js"></script>
 <script src="bower_components/outlayer/item.js"></script>
 <script src="bower_components/outlayer/outlayer.js"></script>
@@ -146,6 +147,7 @@
 <script src="scripts/controllers/list.js"></script>
 <script src="scripts/controllers/items.js"></script>
 <script src="scripts/controllers/item.js"></script>
+<script src="scripts/controllers/highlights.js"></script>
 <!-- endbuild -->
 
 <script src="js/featured_resource_switchcontrol.js"></script>
