--- a/app/index.html
+++ b/app/index.html
@@ -6,7 +6,7 @@
   	<title>{{ exhibition }}</title>
  	 <meta name="description" content="Exhibition Application, powered by Trove">
   	<meta name="author" content="Trove">
-
+<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 
 <link rel="stylesheet" href="bower_components/font-awesome/css/font-awesome.min.css">
 
@@ -123,13 +123,12 @@
 <script src="bower_components/angular-fontawesome/dist/angular-fontawesome.js"></script>
 <script src="bower_components/angular-truncate/src/truncate.js"></script>
 <script src="bower_components/ngInfiniteScroll/build/ng-infinite-scroll.js"></script>
+<script src="bower_components/get-style-property/get-style-property.js"></script>
 <script src="bower_components/get-size/get-size.js"></script>
 <script src="bower_components/eventie/eventie.js"></script>
 <script src="bower_components/doc-ready/doc-ready.js"></script>
 <script src="bower_components/eventEmitter/EventEmitter.js"></script>
-<script src="bower_components/get-style-property/get-style-property.js"></script>
 <script src="bower_components/matches-selector/matches-selector.js"></script>
-<script src="bower_components/desandro-matches-selector/matches-selector.js"></script>
 <script src="bower_components/fizzy-ui-utils/utils.js"></script>
 <script src="bower_components/outlayer/item.js"></script>
 <script src="bower_components/outlayer/outlayer.js"></script>
