--- a/app/index.html
+++ b/app/index.html
@@ -95,7 +95,7 @@
            <li id="base-nav-featured"><a ng-href="#/topics/">FEATURED</a></li>
           <li id="base-nav-resources"><a ng-href="#/resources/">RESOURCES</a></li>
           <li><!-- EMPTY DIV FOR GREY LINE --></li>
-          <li><a class="grid-trigger" href="#/topics/">
+          <li><a class="grid-trigger" href="/#/topics">
               <img id="index-icon-grid" src="img/icon-hamburger.png" height="100%" width="100%"></a>
            </li> <!-- primary exhibition trigger -->
        </ul>
@@ -146,7 +146,7 @@
 <script src="scripts/controllers/list.js"></script>
 <script src="scripts/controllers/items.js"></script>
 <script src="scripts/controllers/item.js"></script>
-<script src="scripts/controllers/highlights.js"></script>
+
 <!-- endbuild -->
 
 <script src="js/featured_resource_switchcontrol.js"></script>
