--- a/app/index.html
+++ b/app/index.html
@@ -153,9 +153,24 @@
 <script src="js/primary_slider_main.js"></script>
 <script src="js/grid-list-view.js"></script>
 <script>
+  $(document).ready(function() {
+    $('.resources').css({
+      'display': 'none',
+    });
+    $('.featured').css({
+      'display': 'none',
+    });
+    $('.base-nav li:nth-child(2)').css({
+      'opacity': '0.5',
+    });
+    $('.base-nav li:nth-child(3)').css({
+      'opacity': '0.5',
+    });
   if (((navigator.userAgent.match(/OS X.*Safari/))|| (navigator.userAgent.match(/iPad/))) && ! navigator.userAgent.match(/Chrome/)) {
      document.body.className += 'safari';
   }
+  $('.grid-trigger').attr('href','/#/topics');
+});
 </script>
 </body>
 </html>
