--- a/app/index.html
+++ b/app/index.html
@@ -77,8 +77,8 @@
     <script>
       // ADD YOUR TROVE API KEY
       var troveAPIKey = "cg6sn8lpjp7o8q19";
-      var troveApiUrl="http://api.trove.nla.gov.au";
-      //var troveApiUrl="https://trove-proxy.herokuapp.com/api";
+      //var troveApiUrl="http://api.trove.nla.gov.au";
+      var troveApiUrl="https://trove-proxy.herokuapp.com/api";
       var config = {};
       config.listSnippet = 50;
       config.directLinks = true;
@@ -123,12 +123,13 @@
 <script src="bower_components/angular-fontawesome/dist/angular-fontawesome.js"></script>
 <script src="bower_components/angular-truncate/src/truncate.js"></script>
 <script src="bower_components/ngInfiniteScroll/build/ng-infinite-scroll.js"></script>
-<script src="bower_components/get-style-property/get-style-property.js"></script>
 <script src="bower_components/get-size/get-size.js"></script>
 <script src="bower_components/eventie/eventie.js"></script>
 <script src="bower_components/doc-ready/doc-ready.js"></script>
 <script src="bower_components/eventEmitter/EventEmitter.js"></script>
+<script src="bower_components/get-style-property/get-style-property.js"></script>
 <script src="bower_components/matches-selector/matches-selector.js"></script>
+<script src="bower_components/desandro-matches-selector/matches-selector.js"></script>
 <script src="bower_components/fizzy-ui-utils/utils.js"></script>
 <script src="bower_components/outlayer/item.js"></script>
 <script src="bower_components/outlayer/outlayer.js"></script>
@@ -169,7 +170,7 @@
   if (((navigator.userAgent.match(/OS X.*Safari/))|| (navigator.userAgent.match(/iPad/))) && ! navigator.userAgent.match(/Chrome/)) {
      document.body.className += 'safari';
   }
-  $('.grid-trigger').attr('href','/#/topics');
+  $('.grid-trigger').attr('href','./#/topics');
 });
 </script>
 </body>
