--- a/app/index.html
+++ b/app/index.html
@@ -170,7 +170,7 @@
   if (((navigator.userAgent.match(/OS X.*Safari/))|| (navigator.userAgent.match(/iPad/))) && ! navigator.userAgent.match(/Chrome/)) {
      document.body.className += 'safari';
   }
-  $('.grid-trigger').attr('href','./#/topics');
+  $('.grid-trigger').attr('href','#/topics');
 });
 </script>
 </body>
